[gd_scene load_steps=3 format=2]

[ext_resource path="res://texture_splitter/TextureSplitter.gd" type="Script" id=1]
[ext_resource path="res://texture_splitter/SpriteTexture.gd" type="Script" id=2]

[node name="TextureSplitter" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 390.0
margin_right = 875.0
margin_bottom = 20.0
size_flags_horizontal = 6

[node name="OpenButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 99.0
margin_bottom = 20.0
text = "Open PCK file"

[node name="SavePNGButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 103.0
margin_right = 237.0
margin_bottom = 20.0
text = "Save image as PNG"

[node name="SaveSplitButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 241.0
margin_right = 390.0
margin_bottom = 20.0
text = "Save images to folder"

[node name="MergePNGButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 394.0
margin_right = 485.0
margin_bottom = 20.0
text = "Merge PNGs"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1266.0
margin_bottom = 706.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpriteList" type="ItemList" parent="VBoxContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 682.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3

[node name="TexturePanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 304.0
margin_right = 1266.0
margin_bottom = 682.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpriteTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer/TexturePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 955.0
margin_bottom = 675.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
script = ExtResource( 2 )

[node name="SaveDialog" type="FileDialog" parent="."]
margin_right = 1000.0
margin_bottom = 600.0
rect_min_size = Vector2( 1000, 600 )
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "Z:/godot_projects/dicey_modgeons"
current_path = "Z:/godot_projects/dicey_modgeons/"
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/SavePNGButton" to="." method="_on_SavePNGButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/SaveSplitButton" to="." method="_on_SaveSplitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/MergePNGButton" to="." method="_on_MergePNGButton_pressed"]
[connection signal="dir_selected" from="SaveDialog" to="." method="_on_SaveDialog_dir_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
